use real filesystem to save scanner results
